--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
 
       - run:
           name: Greeting
-          command: Hello world
+          command: echo Hello world
 
       - run:
           name: Print the Current Time
